--- a/templates/admin/rejected_loan.html
+++ b/templates/admin/rejected_loan.html
@@ -1,4 +1,4 @@
-{% extends 'admin/adminbase.html' %}
+{% extends 'new/general/base.html' %}
 
 {% load static %}
 
@@ -17,8 +17,18 @@
 
 {% endblock %}
 
-{% block body_block %}
+{% block content %}
 
+<style>
+    .height-100 {
+     display: none !important;
+ }
+ .navbar-expand-lg{
+   display: none !important;
+ }
+</style>
+
+{% include 'admin/adminbase.html' %}
 <div class="container">
     <h1 class="text-center text-primary">Rejected Loan</h1>
     <div class="users my-5">
@@ -29,16 +39,17 @@
             <thead class="bg-dark ">
                 <tr class="text-dark ">
                     <th scope="col">SL</th>
-                    <th scope="col">Loan ID</th>
-                    <th scope="col">User ID</th>
-                    <th scope="col">Username</th>
+                    <!--<th scope="col">Loan ID</th>
+                    <th scope="col">User ID</th>-->
+                    <th scope="col">First Name</th>
+                    <th scope="col">Last Name</th>
                     <th scope="col">Status</th>
-                    <th scope="col">Category</th>
+                    <!--<th scope="col">Category</th>-->
                     <th scope="col">Amount</th>
                     <th scope="col">Request Date</th>
                     <th scope="col">Rejected Date</th>
-                    <th scope="col">Year</th>
-                    <th scope="col">Customer Email</th>
+                
+                    <!--<th scope="col">Customer Email</th>-->
 
 
                 </tr>
@@ -48,9 +59,9 @@
 
                 <tr>
                     <th scope="row">{{forloop.counter}}</th>
-                    <td>{{loan.id}}</td>
-                    <td>{{loan.customer.id}}</td>
-                    <td>{{loan}}</td>
+                    <!--<td>{{loan.id}}</td>-->
+                    <td>{{loan.customer.user.first_name}}</td>
+                    <td>{{loan.customer.user.last_name}}</td>
                     <td>
                         <button type="button" class="btn btn-info text-white btn-sm px-3">
                             {{loan.status}}
@@ -58,12 +69,12 @@
                     </td>
                     <!-- <td> <img src="/media/{{user.profile_picture}}" alt="Profile Pic" height="40px" width="40px" />
                     </td> -->
-                    <td>{{loan.category}}</td>
-                    <td>{{loan.amount}} Tk</td>
+                    <!--<td>{{loan.category}}</td>-->
+                    <td>{{loan.amount}} </td>
                     <td>{{loan.request_date}}</td>
                     <td>{{loan.status_date}}</td>
-                    <td>{{loan.year}}</td>
-                    <td>{{loan.customer.user.email}}</td>
+              
+                    <!--<td>{{loan.customer.user.email}}</td>-->
 
 
                 </tr>
