--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,7 +1,19 @@
-{% extends 'admin/adminbase.html' %}
+
+{% extends 'new/general/base.html' %}
 {% load static %}
+{% block content %}
+
+
+
 {% load mathfilters %}
+
+{% include 'admin/adminbase.html' %}
+
+
 {% block css_block %}
+
+
+
 <style>
     #second-part {
         margin: auto;
@@ -43,111 +55,127 @@
         box-shadow: 0 0 10px;
         border-radius: 10px;
     }
+    #messages{
+
+        font-weight: 900;
+    }
+.height-100 {
+    display: none;
+}
+
+.container{
+    margin-top: 60px !important;
+}
+.navbar-expand-lg{
+    display: none;
+  }
 </style>
 {% endblock %}
 
 
-{% block body_block %}
+  
+  
 
-<div class="container ">
-    <div class="mb-5 text-center alert alert-primary" role="alert">
-        <h1>Admin Dashboard</h1>
-    </div>
-
-    <div class="col-md-4">
-        <div class="withdraw status">
-          
-        <h1> <a href="{% url 'adminManager:locations' %}" class="btn btn-danger">locations</a> </h1>
+    <div class="container ">
+        <!--<div class="mb-5 text-center alert alert-primary" role="alert">
+        <h1></h1>
+        </div>-->
+    
+        <div class="col-md-4">
+            <div class="withdraw status">
+              
+            <h1> <a href="{% url 'adminManager:locations' %}" class="btn btn-danger">locations</a> </h1>
+            </div>
+    
         </div>
-
-    </div>
-
-    <div id="second-part">
-        <div class="row">
-            <div class="col-md-4 ">
-                <div class="deposit status">
-                    <h3>Total Customer</h3>
-                    <h1> <span id="digit">{{totalCustomer}}</span> </h1>
+    
+        <div id="second-part">
+            <div class="row">
+                <div class="col-md-4 ">
+                    <div class="deposit status">
+                        <h3>Total Customer</h3>
+                        <h1> <span id="digit">{{totalCustomer}}</span> </h1>
+                    </div>
+    
                 </div>
-
-            </div>
-            <div class="col-md-4">
-                <div class="withdraw status">
-                    <h3>Request Pending</h3>
-                    <h1> <span id='digit'>{{request}}</span> </h1>
+                <div class="col-md-4">
+                    <div class="withdraw status">
+                        <h3>Request Pending</h3>
+                        <h1> <span id='digit'>{{request}}</span> </h1>
+                    </div>
+    
                 </div>
-
-            </div>
-            <div class="col-md-4 ">
-                <div class="bg-info status">
-                    <h3>Loan Approved</h3>
-                    <h1><span id="digit">{{approved}}</span>
-
-                    </h1>
+                <div class="col-md-4 ">
+                    <div class="bg-info status">
+                        <h3>Loan Approved</h3>
+                        <h1><span id="digit">{{approved}}</span>
+    
+                        </h1>
+                    </div>
+    
+    
                 </div>
-
-
-            </div>
-            <div class="col-md-4 ">
-                <div class="status" style="background-color:#95CEFF">
-                    <h3>Loan Rejected</h3>
-                    <h1><span id="digit">{{rejected}}</span></h1>
+                <div class="col-md-4 ">
+                    <div class="status" style="background-color:#95CEFF">
+                        <h3>Loan Rejected</h3>
+                        <h1><span id="digit">{{rejected}}</span></h1>
+                    </div>
+    
                 </div>
-
-            </div>
-            <div class="col-md-4 ">
-                <div class="status" style="background-color:#90ED7D">
-                    <h3>Total Payable Loan</h3>
-
-                    {% if totalPayable %}
-                    <h1><span id="digit">₦{{ totalPayable|sub:0 }}</span></h1>
-                    {% else %}
-                    <h1><span id="digit">₦0</span></h1>
-                    {% endif %}
+                <div class="col-md-4 ">
+                    <div class="status" style="background-color:#90ED7D">
+                        <h3>Total Payable Loan</h3>
+    
+                        {% if totalPayable %}
+                        <h1><span id="digit">₦{{ totalPayable|sub:0 }}</span></h1>
+                        {% else %}
+                        <h1><span id="digit">₦0</span></h1>
+                        {% endif %}
+                    </div>
+    
                 </div>
-
-            </div>
-            <div class="col-md-4 ">
-                <div class="status" style="background-color:#FF7599">
-                    <h3>Total Approved Loan</h3>
-
-                    {% if totalLoan %}
-                    <h1><span id="digit">₦{{totalLoan|sub:0}}</span></h1>
-                    {% else %}
-                    <h1><span id="digit">₦0</span></h1>
-                    {% endif %}
+                <div class="col-md-4 ">
+                    <div class="status" style="background-color:#FF7599">
+                        <h3>Total Approved Loan</h3>
+    
+                        {% if totalLoan %}
+                        <h1><span id="digit">₦{{totalLoan|sub:0}}</span></h1>
+                        {% else %}
+                        <h1><span id="digit">₦0</span></h1>
+                        {% endif %}
+                    </div>
+    
                 </div>
-
-            </div>
-            <div class="col-md-4 ">
-                <div class="status" style="background-color:#EF5350">
-                    <h3>Total Paid Loan</h3>
-                    {% if totalPaid %}
-                    <h1><span id="digit">₦{{totalPaid|sub:0}}</span></h1>
-                    {% else %}
-                    <h1><span id="digit">₦0</span></h1>
-                    {% endif %}
+                <div class="col-md-4 ">
+                    <div class="status" style="background-color:#EF5350">
+                        <h3>Total Paid Loan</h3>
+                        {% if totalPaid %}
+                        <h1><span id="digit">₦{{totalPaid|sub:0}}</span></h1>
+                        {% else %}
+                        <h1><span id="digit">₦0</span></h1>
+                        {% endif %}
+                    </div>
+    
                 </div>
-
-            </div>
-
-            <div class="col-md-4 ">
-                <div class="status" style="background-color:#42A5F5">
-                    <h3>Total Due Loan</h3>
-
-                    {% if totalPayable and totalPaid %}
-                    <h1><span id="digit">₦{{ totalPayable|sub:totalPaid }}</span></h1>
-                    {% elif totalPayable %}
-                    <h1><span id="digit">₦{{ totalPayable|sub:0 }}</span></h1>
-                    {% else %}
-                    <h1><span id="digit">₦0</span></h1>
-                    {% endif %}
+    
+                <div class="col-md-4 ">
+                    <div class="status" style="background-color:#42A5F5">
+                        <h3>Total Due Loan</h3>
+    
+                        {% if totalPayable and totalPaid %}
+                        <h1><span id="digit">₦{{ totalPayable|sub:totalPaid }}</span></h1>
+                        {% elif totalPayable %}
+                        <h1><span id="digit">₦{{ totalPayable|sub:0 }}</span></h1>
+                        {% else %}
+                        <h1><span id="digit">₦0</span></h1>
+                        {% endif %}
+                    </div>
+    
                 </div>
-
             </div>
+    
         </div>
-
     </div>
-</div>
+
 
 {% endblock %}
