--- a/templates/admin/request_user.html
+++ b/templates/admin/request_user.html
@@ -1,4 +1,5 @@
-{% extends 'admin/adminbase.html' %}
+{% extends 'new/general/base.html' %}
+
 
 {% load static %}
 
@@ -17,10 +18,19 @@
 
 {% endblock %}
 
-{% block body_block %}
+{% block content %}
 
+<style>
+    .height-100 {
+     display: none !important;
+ }
+ .navbar-expand-lg{
+   display: none !important;
+ }
+</style>
+{% include 'admin/adminbase.html' %}
 <div class="container">
-    <h1 class="text-center text-primary">Total Customer Loan Request</h1>
+    <h1 class="text-center text-primary">Total Loan Request</h1>
     <div class="users my-5">
        
 <h3 style="color: red">{{previousAmount}}</h3>
@@ -31,15 +41,16 @@
                 <tr class="text-dark ">
                     <th scope="col">SL</th>
                     <th scope="col">Loan ID</th>
-                    <th scope="col">User ID</th>
-                    <th scope="col">Username</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Category</th>
-                    <th scope="col">Request Amount</th>
+                    <th scope="col">First Name</th>
+                    <th scope="col">Last Name</th>
                     <th scope="col">Request Date</th>
-                    <th scope="col">Year</th>
-                    <th scope="col">Email</th>
-                    <th>Action</th>
+                    <th scope="col">Status</th>
+                    <!--<th scope="col">Category</th>-->
+                    <th scope="col">Request Amount</th>
+                    <!--<th scope="col">Request Date</th>
+               
+                    <th scope="col">Email</th>-->
+                  
 
                 </tr>
             </thead>
@@ -49,20 +60,22 @@
                 <tr>
                     <th scope="row">{{forloop.counter}}</th>
                     <td>{{loan.id}}</td>
-                    <td>{{loan.customer.id}}</td>
+                    <!--<td>{{loan.customer.id}}</td>-->
                     <td>{{loan}}</td>
+                    <td>{{loan.customer.user.first_name}}</td>
+                    <td>{{loan.customer.user.last_name}}</td>
+                    <td>{{loan.request_date}}</td>
                     <td>
                         <button type="button" class="btn btn-info text-white btn-sm px-3">
                             {{loan.status}}
                         </button>
                     </td>
-                    <!-- <td> <img src="/media/{{user.profile_picture}}" alt="Profile Pic" height="40px" width="40px" />
-                    </td> -->
-                    <td>{{loan.category}}</td>
+                   
+                    <!--<td>{{loan.category}}</td>-->
                     <td># {{loan.amount}} </td>
-                    <td>{{loan.request_date}}</td>
-                    <td>{{loan.year}}</td>
-                    <td>{{loan.customer.user.email}}</td>
+                    <
+                   
+                    <!--<td>{{loan.customer.user.email}}</td>-->
 
                     
                     <td>
