--- a/templates/admin/transaction.html
+++ b/templates/admin/transaction.html
@@ -1,10 +1,6 @@
-{% extends 'admin/adminbase.html' %}
+{% extends 'new/general/base.html' %}
 
 {% load static %}
-
-
-
-
 
 {% block css_block %}
 <style>
@@ -13,7 +9,16 @@
 
 {% endblock %}
 
-{% block body_block %}
+{% block content %}
+<style>
+     .height-100 {
+      display: none !important;
+  }
+  .navbar-expand-lg{
+    display: none !important;
+  }
+</style>
+{% include 'admin/adminbase.html' %}
 
 <div class="container">
     <h1 class="text-center text-primary">Transaction Loan</h1>
@@ -26,14 +31,15 @@
                 <tr class="text-dark ">
                     <th scope="col">SL</th>
 
-                    <th scope="col">User ID</th>
-                    <th scope="col">Username</th>
+                    <!--<th scope="col">User ID</th>-->
+                    <th scope="col">First Name</th>
+                    <th scope="col">Last Name</th>
 
                     <th scope="col">Payment Amount</th>
                     <th scope="col">Transaction ID</th>
                     <th scope="col">Date</th>
 
-                    <th scope="col">Customer Email</th>
+                   
 
 
                 </tr>
@@ -44,7 +50,7 @@
                 <tr>
                     <th scope="row">{{forloop.counter}}</th>
 
-                    <td>{{loan.customer.id}}</td>
+                    <!--<td>{{loan.customer.id}}</td>-->
                     <td>{{loan.customer}}</td>
 
                     <td>₦{{loan.payment}} </td>
