--- a/templates/new/log.html
+++ b/templates/new/log.html
@@ -1,16 +1,8 @@
 
-{% extends 'new/general/base.html' %}
+{% extends 'admin/adminbase.html' %}
 {% load static %}
-{% block content %}
-
-
-
 {% load mathfilters %}
-
 {% block css_block %}
-
-
-
 <style>
     #second-part {
         margin: auto;
@@ -52,61 +44,53 @@
         box-shadow: 0 0 10px;
         border-radius: 10px;
     }
-    #messages{
-
-        font-weight: 900;
-    }
-    .page-heading,.header-text{
-    height: 20px;
-}
-
-   
 </style>
 {% endblock %}
 
 
-    <!-- Page Content -->
-    <div class="page-heading header-text">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h1>User's Dashboard</h1>
-          </div>
+{% block body_block %}
+
+<div class="container ">
+    <div class="mb-5 text-center alert alert-primary" role="alert">
+        <h1>Admin Dashboard</h1>
+    </div>
+
+    <div class="col-md-4">
+        <div class="withdraw status">
+          
+        <h1> <a href="{% url 'adminManager:locations' %}" class="btn btn-danger">locations</a> </h1>
         </div>
-      </div>
-    </div>
-  
-  
 
-<div class="container p-5 my-5">
-    <div class="p-5 m-4 text-center alert alert-primary" role="alert">
-       
-        {% for message in messages %}
-           <p id="messages">{{ message }}</p>
-        {% endfor %}
-
-        <h1>User Dashboard</h1>
     </div>
+
     <div id="second-part">
         <div class="row">
-
-
             <div class="col-md-4 ">
-                <div class="status" style="background-color:#4ea4f0">
-                    <h3>Loan Request</h3>
-                    <h1><span id="digit">{{request}}</span></h1>
+                <div class="deposit status">
+                    <h3>Total Customer</h3>
+                    <h1> <span id="digit">{{totalCustomer}}</span> </h1>
+                </div>
+
+            </div>
+            <div class="col-md-4">
+                <div class="withdraw status">
+                    <h3>Request Pending</h3>
+                    <h1> <span id='digit'>{{request}}</span> </h1>
                 </div>
 
             </div>
             <div class="col-md-4 ">
-                <div class="status" style="background-color:#a64cf0">
+                <div class="bg-info status">
                     <h3>Loan Approved</h3>
-                    <h1><span id="digit">{{approved}}</span></h1>
+                    <h1><span id="digit">{{approved}}</span>
+
+                    </h1>
                 </div>
+
 
             </div>
             <div class="col-md-4 ">
-                <div class="status" style="background-color:#4c4ff0">
+                <div class="status" style="background-color:#95CEFF">
                     <h3>Loan Rejected</h3>
                     <h1><span id="digit">{{rejected}}</span></h1>
                 </div>
@@ -114,24 +98,24 @@
             </div>
             <div class="col-md-4 ">
                 <div class="status" style="background-color:#90ED7D">
-                    <h3>Payable Loan</h3>
+                    <h3>Total Payable Loan</h3>
 
                     {% if totalPayable %}
                     <h1><span id="digit">₦{{ totalPayable|sub:0 }}</span></h1>
                     {% else %}
-                    <h1><span id="digit">0</span></h1>
+                    <h1><span id="digit">₦0</span></h1>
                     {% endif %}
                 </div>
 
             </div>
             <div class="col-md-4 ">
                 <div class="status" style="background-color:#FF7599">
-                    <h3>Approved Loan</h3>
+                    <h3>Total Approved Loan</h3>
 
                     {% if totalLoan %}
                     <h1><span id="digit">₦{{totalLoan|sub:0}}</span></h1>
                     {% else %}
-                    <h1><span id="digit">0</span></h1>
+                    <h1><span id="digit">₦0</span></h1>
                     {% endif %}
                 </div>
 
@@ -139,32 +123,25 @@
             <div class="col-md-4 ">
                 <div class="status" style="background-color:#EF5350">
                     <h3>Total Paid Loan</h3>
-
                     {% if totalPaid %}
                     <h1><span id="digit">₦{{totalPaid|sub:0}}</span></h1>
-                   
                     {% else %}
-                    <h1><span id="digit">0</span></h1>
+                    <h1><span id="digit">₦0</span></h1>
                     {% endif %}
                 </div>
 
             </div>
 
-            
-            <!--
-                 { elif outstanding }
-                    <h1><span id="digit">0</span></h1>
-            -->
-
-
             <div class="col-md-4 ">
                 <div class="status" style="background-color:#42A5F5">
                     <h3>Total Due Loan</h3>
 
-                    {% if totalPayable or totalPaid %}
-                    <h1><span id="digit">{{ totalPayable|sub:totalPaid }}</span></h1>
+                    {% if totalPayable and totalPaid %}
+                    <h1><span id="digit">₦{{ totalPayable|sub:totalPaid }}</span></h1>
+                    {% elif totalPayable %}
+                    <h1><span id="digit">₦{{ totalPayable|sub:0 }}</span></h1>
                     {% else %}
-                    <h1><span id="digit">0</span></h1>
+                    <h1><span id="digit">₦0</span></h1>
                     {% endif %}
                 </div>
 
@@ -174,11 +151,4 @@
     </div>
 </div>
 
-
-
 {% endblock %}
-
-
-
-
-
