--- a/templates/loanapp/user_loan_history.html
+++ b/templates/loanapp/user_loan_history.html
@@ -17,23 +17,71 @@
 
 {% endblock %}
 
-{% block body_block %}
-{% include 'navbar.html' %}
+{% block content %}
+<style>
+  
+ .page-heading{
+        height: 30px !important;
+    }
+ @media (max-width:750px) {
+    .container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 0px;
+    margin-right: auto;
+    margin-left: 0px;
+}
+.text-center {
+    text-align: center!important;
+    font-size: 14px;
+}
+    
+ }  
+ @media (max-width: 650px){
+.text-center {
+    text-align: center!important;
+    font-size: 12px;
+} 
+ }
+ @media (max-width:580px) {
+    .table td, .table th {
+    padding: 5px;
+    vertical-align: top;
+    border-top: 1px solid #dee2e6;
+}
+    
+ }
+</style>
+
+
+
+<div class="page-heading header-text">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Loan Request History</h1>
+          <span>{{ user.first_name }} {{user.last_name}}</span>
+         
+        </div>
+      </div>
+    </div>
+  </div>
+
 <div class="container my-5">
-    <h1 class="text-center text-primary">Loan Request History</h1>
+    <!--<h1 class="text-center text-primary">Loan Request History</h1>-->
     <div class="my-5 users">
 
 
 
         <table class="table text-center table-light table-hover table-bordered table-striped">
-            <thead class="bg-dark ">
+            <thead class="bg-light ">
                 <tr class="text-dark ">
                     <th scope="col">SL</th>
-              
-                    <th scope="col">Username</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Category</th>
+
                     <th scope="col">Request Amount</th>
+                    <th scope="col">Reason</th>
+                    <th scope="col">Status</th>
+
                     <th scope="col">Request Date</th>
                     <th scope="col">Date Approved</th>
                     <th scope="col">Payment</th>
@@ -49,16 +97,16 @@
                     <th scope="row">{{forloop.counter}}</th>
                   
                  
-                    <td>{{loan}}</td>
+                  
+                    <td># {{loan.amount}} </td>
+                    <td>{{loan.category}}</td>
+
                     <td>
                         <button type="button" class="px-3 text-white btn btn-info btn-sm">
                             {{loan.status}}
                         </button>
                     </td>
-                    <!-- <td> <img src="/media/{{user.profile_picture}}" alt="Profile Pic" height="40px" width="40px" />
-                    </td> -->
-                    <td>{{loan.category}}</td>
-                    <td># {{loan.amount}} </td>
+                   
                     <td>{{loan.request_date}}</td>
 
                     {% for d in get_info %}
@@ -88,5 +136,5 @@
 
 </div>
 
-{% include 'footer.html'%}
+
 {% endblock %}
