--- a/templates/loginApp/customerDetail.html
+++ b/templates/loginApp/customerDetail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'new/general/base.html' %}
 
 {% block content %}
 
@@ -7,17 +7,32 @@
 
 {%load static%}
 
-{% block title_block %} User Sign Up {% endblock %}
+
 
 {% block css_block %}{% endblock %}
 
 
-{% block body_block %}{% endblock %}
 
-{% include 'navbar.html' %}
+<style>
+    .page-heading{
+        height: 30px;
+    }
+</style>
 
 
 
+<div class="page-heading header-text">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Loan Request</h1>
+          <span>Page</span>
+         
+         
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
@@ -27,7 +42,7 @@
    
     <div class="row">
         <div class="p-5 m-auto rounded shadow-lg col-md-5 bg-body">
-            <h3 class="text-center text-success">{{user}},Please complete your form</h3>
+            <h3 class="text-center text-success">Please complete your form</h3>
                 <form action="{% url 'account:customer-detail' %}" method="POST" enctype="multipart/form-data">
                 {% if error %}
                 <div class="my-2">
@@ -144,6 +159,5 @@
 
 
 
-{% include "footer.html" %}
 
 {% endblock %}
