--- a/templates/loginApp/update/edit_bank.html
+++ b/templates/loginApp/update/edit_bank.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'new/general/base.html' %}
 
 {% block content %}
 
@@ -14,7 +14,24 @@
 
 {% block body_block %}{% endblock %}
 
-{% include 'navbar.html' %}
+
+
+<style>
+    .page-heading{
+        height: 30px;
+    }
+  
+  </style>
+  <div class="page-heading header-text">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>update page</h1>
+          <span>update your Information below</span>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
