--- a/templates/admin/approved_loan.html
+++ b/templates/admin/approved_loan.html
@@ -51,8 +51,8 @@
                 <tr>
                     <th scope="row">{{forloop.counter}}</th>
                     <td>{{loan.id}}</td>
-                    <!--<td>{{loan.customer.id}}</td>-->
-                    <td>{{loan}}</td>
+                 
+                    <td>{{loan.customer.first_name}}</td>
                     <td>
                         <button type="button" class="btn btn-info text-white btn-sm px-3">
                             {{loan.status}}
