--- a/templates/admin/approved_loan.html
+++ b/templates/admin/approved_loan.html
@@ -36,9 +36,9 @@
                     <th scope="col">Status</th>
                     <!--<th scope="col">Category</th>-->
                     <th scope="col">Amount</th>
-                    <!--<th scope="col">Request Date</th>-->
+                   
                     <th scope="col">Approved Date</th>
-                    <th scope="col">expected Return</th>
+                    <!--<th scope="col">expected Return</th>-->
                   
                   
 
@@ -65,7 +65,7 @@
                     <td>{{loan.status_date}}</td>
 
                 
-                    <td>₦{{ loan.total_payment }}</td>
+                    <!--<td>₦{{ loan.total_payment }}</td>-->
                     <!--<td>{{ loan.total_payment|add:'-loan.amount'}}</td>
                     <td>{{ profit }}</td>-->
                
