--- a/templates/admin/rejected_loan.html
+++ b/templates/admin/rejected_loan.html
@@ -34,22 +34,20 @@
     <div class="users my-5">
 
 
-
         <table class="table table-light table-hover table-bordered table-striped text-center">
             <thead class="bg-dark ">
                 <tr class="text-dark ">
                     <th scope="col">SL</th>
-                    <!--<th scope="col">Loan ID</th>
-                    <th scope="col">User ID</th>-->
+                 
                     <th scope="col">First Name</th>
-                    <th scope="col">Last Name</th>
+                   
                     <th scope="col">Status</th>
                     <!--<th scope="col">Category</th>-->
                     <th scope="col">Amount</th>
                     <th scope="col">Request Date</th>
                     <th scope="col">Rejected Date</th>
                 
-                    <!--<th scope="col">Customer Email</th>-->
+                 
 
 
                 </tr>
@@ -59,22 +57,21 @@
 
                 <tr>
                     <th scope="row">{{forloop.counter}}</th>
-                    <!--<td>{{loan.id}}</td>-->
-                    <td>{{loan.customer.user.first_name}}</td>
-                    <td>{{loan.customer.user.last_name}}</td>
+                  
+                    <td>{{loan.customer.first_name}}</td>
+                   
                     <td>
                         <button type="button" class="btn btn-info text-white btn-sm px-3">
                             {{loan.status}}
                         </button>
                     </td>
-                    <!-- <td> <img src="/media/{{user.profile_picture}}" alt="Profile Pic" height="40px" width="40px" />
-                    </td> -->
+                
                     <!--<td>{{loan.category}}</td>-->
-                    <td>{{loan.amount}} </td>
+                    <td>₦{{loan.amount}} </td>
                     <td>{{loan.request_date}}</td>
                     <td>{{loan.status_date}}</td>
               
-                    <!--<td>{{loan.customer.user.email}}</td>-->
+                
 
 
                 </tr>
