--- a/templates/admin/adminbase.html
+++ b/templates/admin/adminbase.html
@@ -46,8 +46,8 @@
         </header>
         <div class="l-navbar" id="nav-bar">
             <nav class="nav">
-                <div> <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span
-                            class="nav_logo-name">Admin Dashboard</span> </a>
+                <div> <a href="{% url 'adminManager:locations' %}" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span
+                            class="nav_logo-name">Locations</span> </a>
                     <div class="nav_list">
                         <a href="{% url 'adminManager:dashboard' %}" class="nav_link">
                             <i class='bx bx-grid-alt nav_icon'></i>
