--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -81,13 +81,13 @@
         <h1></h1>
         </div>-->
     
-        <div class="col-md-4">
+        <!--<div class="col-md-4">
             <div class="withdraw status">
               
-            <h1> <a href="{% url 'adminManager:locations' %}" class="btn btn-danger">locations</a> </h1>
+            <h1><a href="{% url 'adminManager:locations' %}" class="btn btn-danger">locations</a> </h1>
             </div>
     
-        </div>
+        </div>-->
     
         <div id="second-part">
             <div class="row">
