adding readme file

--- a/templates/admin/search.html
+++ b/templates/admin/search.html
@@ -128,7 +128,7 @@
                     <td>₦{{loan.payment}}</td>
                     <td>{{ loan.payment_date}}</td>
 
-                    <td> {{loan.transaction_id}} </td>
+                    <td> {{loan.transactionId}} </td>
             
                 </tr>
                 {% endfor %}
