--- a/templates/admin/transaction.html
+++ b/templates/admin/transaction.html
@@ -56,7 +56,7 @@
                     <td>{{loan.customer.last_name}}</td>
 
                     <td>₦{{loan.payment}} </td>
-                    <td>{{loan.transaction_id}}</td>
+                    <td>{{loan.transactionId}}</td>
                     <td>{{loan.payment_date}}</td>
                    
 
