--- a/templates/loanapp/user_transaction.html
+++ b/templates/loanapp/user_transaction.html
@@ -74,8 +74,8 @@
                     <td>{{loan.customer.id}}</td>
                   
                     <td>{{loan.payment_date}}</td>
-                    <td>{{loan.transaction_id}}</td>
-                    <td>#{{loan.payment}}</td>
+                    <td>{{loan.transactionId}}</td>
+                    <td>₦{{loan.payment}}</td>
                    <td>{{loan.interestRate}}</td>
 
                    
