--- a/templates/admin/location.html
+++ b/templates/admin/location.html
@@ -113,6 +113,8 @@ header{
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         
           <form action="{% url 'adminManager:search_location' %}" method="GET" class="d-flex">
+            
+            {% csrf_token %}
             <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
 
