--- a/templates/loginApp/login.html
+++ b/templates/loginApp/login.html
@@ -42,7 +42,7 @@
                 {% endif %}
 
               
-               
+                {% csrf_token %}
 
 
                 <div class="mb-4 form-outline">
