--- a/templates/loginApp/signup.html
+++ b/templates/loginApp/signup.html
@@ -48,7 +48,7 @@ User Sign Up
                 </div>
                 {% endif %}
 
-            
+                {% csrf_token %}
 
                 <div class="mb-4 form-outline">
 
