--- a/templates/loginApp/login.html
+++ b/templates/loginApp/login.html
@@ -20,7 +20,21 @@
     </div>
   </div>
 
+  
+<div class="container my-5">
 
+    <div class="row">
+        <div class="p-5 m-auto rounded shadow-lg col-md-4 bg-body">
+            <h3 class="text-center text-success">{{user}} </h3>
+           
+        </div>
+    </div>
+
+
+
+
+
+</div>
 
 
 
