--- a/templates/loginApp/signup.html
+++ b/templates/loginApp/signup.html
@@ -28,6 +28,20 @@ User Sign Up
   </div>
 
 
+<div class="container my-5">
+
+    <div class="row">
+        <div class="p-5 m-auto rounded shadow-lg col-md-5 bg-body">
+            <h3 class="text-center text-success">{{user}}</h3>
+           
+        </div>
+    </div>
+
+
+
+
+
+</div>
 
 
 {% endblock %}
