--- a/templates/loanapp/payment.html
+++ b/templates/loanapp/payment.html
@@ -27,7 +27,31 @@ User Login
     <div class="row">
         <div class="p-5 m-auto rounded shadow-lg col-md-4 bg-body">
             <h3 class="text-center text-success">{{user.first_name}} </h3>
-           
+            <form method="POST" class="my-5">
+
+                {% csrf_token %}
+
+
+                <div class="mb-4 form-outline">
+
+                    {% render_field form.payment|attr:'required:true' class="form-control" %}
+                    <label class="form-label">Payment amount</label>
+                </div>
+
+                <button type="submit" class="mb-4 btn btn-primary btn-block">Payment</button>
+
+
+
+        </div>
+
+        <!-- Submit button -->
+
+        <!-- Register buttons -->
+
+
+
+
+        </form>
     </div>
 </div>
 
