--- a/templates/loginApp/update/edit_password.html
+++ b/templates/loginApp/update/edit_password.html
@@ -15,7 +15,38 @@
     <div class="row">
         <div class="p-5 m-auto my-5 rounded shadow-lg col-md-6 bg-body">
             <h3 class="text-center text-success">Update Your Password </h3>
+            <form method="POST" class="my-5" enctype="multipart/form-data">
+                {% csrf_token %}
+                <!-- 2 column grid layout with text inputs for the first and last names -->
+               
+
            
+
+
+                <!-- Email input -->
+                <div class="mb-4 form-outline">
+                    <input type="password" name="password" class="form-control" required>
+                    {% render_field form.password|attr:'required:true' type="password?" class="form-control" %}
+
+                    <label class="form-label">Password</label>
+                </div>
+
+           
+
+
+                {% if form.errors %}
+                {% for field in form %}
+                       {% for error in field.errors %}
+                              <div class="alert alert-danger">
+                                   <strong>{{ error|escape }}</strong>
+                              </div>
+                       {% endfor %}
+                {% endfor %}
+          {% endif %}
+
+                <!-- Submit button -->
+                <button type="submit" class="mb-4 btn btn-primary btn-block">Submit</button>
+            </form>
 
 
         </div>
