--- a/templates/loanapp/customerBank.html
+++ b/templates/loanapp/customerBank.html
@@ -45,7 +45,97 @@
         <div class="p-5 m-auto rounded shadow-lg col-md-5 bg-body">
             <h3 class="text-center text-success">Please complete your bank information</h3>
               
-             
+                <form action="{% url 'loanApp:user-bank' %}" method="POST" enctype="multipart/form-data">
+                {% if err %}
+                <h4>Some errors in your form.Please check the numbers you typed and make sure their are correct</h4>
+                {% else %}
+                 <div class="my-2">
+                    <div class="row">
+                        <div class="m-auto col">
+                            <div class="text-center alert alert-danger" role="alert">
+                                {{error}}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
+
+                {% csrf_token %}
+
+               
+                <div class="mb-4 form-outline">
+
+                    {% render_field form.bank_name|attr:'required:true' class="form-control" %}
+                    <label class="form-label">Bank Name</label>
+                </div>
+                <div class="mb-4 form-outline">
+
+                    {% render_field form.account_no|attr:'required:true' class="form-control" %}
+                    <label class="form-label">Account Number</label>
+                </div>
+                  
+              
+                <div class="mb-4 form-outline">
+
+                    {% render_field form.next_of_kin|attr:'required:true' class="form-control" %}
+                    <label class="form-label">Next Of Kin</label>
+                </div>
+    
+                {{ form.errors }}
+
+                {% if form.errors %}
+
+                {% for field in form %}
+                       {% for error in field.errors %}
+                              <div class="alert alert-danger">
+                                   <strong>{{ error|escape }}</strong>
+                              </div>
+                       {% endfor %}
+                {% endfor %}
+                
+          {% endif %}
+                 
+                <!-- 2 column grid layout for inline styling -->
+                <div class="mb-4 row ">
+                    <div class="col">
+                        <!-- Checkbox -->
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" checked />
+                            <label class="form-check-label"> Remember me </label>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <!-- Simple link -->
+                        <a href="#!">Forgot password?</a>
+                    </div>
+                </div>
+
+                <!-- Submit button -->
+                <button type="submit" class="mb-4 btn btn-primary btn-block">Submit</button>
+
+                <!-- Register buttons -->
+                <div class="text-center">
+                    <p>Are you already a member? <a href="/account/login-customer">Sign in</a></p>
+                    <p>or sign up with:</p>
+                    <button type="button" class="mx-1 btn btn-primary btn-floating">
+                        <i class="fab fa-facebook-f"></i>
+                    </button>
+
+                    <button type="button" class="mx-1 btn btn-primary btn-floating">
+                        <i class="fab fa-google"></i>
+                    </button>
+
+                    <button type="button" class="mx-1 btn btn-primary btn-floating">
+                        <i class="fab fa-twitter"></i>
+                    </button>
+
+                    <button type="button" class="mx-1 btn btn-primary btn-floating">
+                        <i class="fab fa-github"></i>
+                    </button>
+                </div>
+         
+            </form>
         </div>
     </div>
 </div>
