--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -74,7 +74,9 @@
 
 
   
-  
+<div> <a href="{% url 'adminManager:locations' %}" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span
+    class="nav_logo-name">Locations</span> </a>
+</div>
 
     <div class="container ">
     
@@ -82,7 +84,7 @@
             <div class="row">
                 <div class="col-md-4 ">
                     <div class="deposit status">
-                        <h3>Total Customer</h3>
+                        <h3>Total Customers</h3>
                         <h1> <span id="digit">{{totalCustomer}}</span> </h1>
                     </div>
     
