--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -74,8 +74,7 @@
 
 
   
-<div> <a href="{% url 'adminManager:locations' %}" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span
-    class="nav_logo-name">Locations</span> </a>
+<div> <a href="{% url 'adminManager:locations' %}" class="btn btn-danger">Locations</a>
 </div>
 
     <div class="container ">
