--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -74,9 +74,9 @@
 
 
   
-<div> <a href="{% url 'adminManager:locations' %}" class="btn btn-danger">Locations</a>
+<div class="location"> 
+<a href="{% url 'adminManager:locations' %}" type="button" class="btn btn-success" style="cursor: pointer; margin-top: 70px; text-align: righ;;">Search for Locations</a>
 </div>
-
     <div class="container ">
     
         <div id="second-part">
